--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
